# candylane

./: .gitignore  CLAUDE.md  Cargo.toml  LANE_A_STATUS.md  MANIFESTO.md  PHASE1_ARCHITECTURE.md  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  VOCABULARY.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/candylane-cli/: Cargo.toml
crates/candylane-cli/src/: main.rs
crates/candylane-core/: Cargo.toml
crates/candylane-core/migrations/: 0001_init.sql
crates/candylane-core/src/: engine.rs  handler.rs  lib.rs  lock.rs  profile.rs  reboot.rs  registry.rs  store.rs  types.rs
crates/candylane-core/src/handlers/: dotfile.rs  mod.rs  script.rs  winget.rs
crates/candylane-core/tests/: engine_transaction.rs  store_roundtrip.rs  vertical_slice.rs  winget_live.rs
crates/candylane-crypto/: Cargo.toml
crates/candylane-crypto/src/: lib.rs
docs/: B-ACL_APPROACH.md  FOLLOWUPS.md  PHASE1_ARCHITECTURE.md  REFERENCES.md  ROADMAP.md  THREAT_MODEL.md
profiles/minimal-dev/: candylane.toml
profiles/minimal-dev/home/: .gitconfig
profiles/minimal-dev/scripts/: example-tweak.ps1  example-tweak.undo.ps1
profiles/refurb-clean/: candylane.toml
profiles/refurb-clean/assets/: REFURB-NOTE.txt
profiles/refurb-clean/scripts/: cleanup.ps1  cleanup.undo.ps1
