[package]
name = "candylane-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
sha2.workspace = true
fs2.workspace = true
time.workspace = true
toml = "0.8"

[dev-dependencies]
# Handlers are unit-tested off-Windows via the WingetExecutor seam.
