[package]
name = "candylane-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
sha2.workspace = true
fs2.workspace = true
time.workspace = true
toml = "0.8"

# ScriptHandler (Lane D) uses libc::setsid / kill / SIGKILL for the CRITICAL #1
# process-group timeout-kill. Unix-only; the Windows path is compiled out.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Handlers are unit-tested off-Windows via the WingetExecutor seam.
tempfile = "3"
