[package]
name = "candylane-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true

# windows-rs carve-out (Decision #8): owner-only ACL set+assert lives ONLY in this crate.
[target.'cfg(windows)'.dependencies]
windows-acl = "0.3"
