[package]
name = "candylane-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
zeroize = "1.8"

# DPAPI (user-scope) primary protection for the private Ed25519 identity key on Windows.
# The on-disk bytes are ciphertext. Successful unprotect on load is the assertion.
# No owner-only file grant is implemented yet; DPAPI is the sole protection in force.
# A cheap owner grant (no heavy DACL enumeration) is a possible future defense-in-depth.
# See B-ACL_APPROACH.md (superseded) and the portability clarification (author-machine-bound key).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }
